--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -5,8 +5,8 @@
 
   <div id="filter-bar">
     <label>show:</label>
-    <a href="{{space.permalink}}" title="link to show active tee's" class="btn active">active tees</a>
-    <a href="{{space.permalink}}?filter=expired" title="link to show expired tee's" class="btn">expired tees</a>
+    <a href="{{space.permalink}}" title="link to show active tee's" class="btn {% if filter == "expired" %}{% else %}active{% endif %}">active tees</a>
+    <a href="{{space.permalink}}?filter=expired" title="link to show expired tee's" class="btn {% if filter == "expired" %}active{% endif %}">expired tees</a>
   </div>
 
   {% if space.ideas != empty %}
