--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -147,12 +147,12 @@
             <li>Vote on the designs that you like</li>
           </ol>
           
-          <h2>Feeling arty? £200?</h2>
+          <h2>Feeling arty?  Fancy some cash?</h2>
           <ol>
             <li>Login with your Facebook or Twitter account</li>
             <li>Submit your own design</li>
             <li>Get as many votes as possible in 14 days</li>
-            <li>Every month the design with the most votes wins £200</li>
+            <li>Every month the top design gets printed and sold in the shop and the winner gets a cut of the sales... Amazing!</li>
           </ol>
 
         </div><!-- end .block_wrapper -->
@@ -294,10 +294,10 @@
   <div style="display:none">
     <div id="teezilla-about" class="htmlbox">
       <h1>About Teezilla</h1>
-      <p>Teezilla is a site where anyone with an idea can join up, submit their designs and be in with a chance of winning £200, then get their teeshirt design printed.</p>
-      <p>The idea of Teezilla has been formed by a partnership between web company Simpleweb, based on the Bristol Harbourside and ex record producer and entrepreneur Neal Slateford.</p>
-      <p>Teezilla invites you to join up and submit as many teeshirt designs as you like.  The designs are then exhibited on the site for 14 days.  In this time other users can log in and ‘like’ their favorite designs through Facebook and / or Twitter, as well as leaving comments. At the end of every month the tee with the most likes wins £200 and the teeshirt gets printed.</p>
-      <p>Cast your votes or submit and design now and join the Teezilla community.</p>
+      <p>TeeZilla is a site where anyone with an idea can join up, submit their designs and be in with a chance of getting their design printed on a tee and get a nice cut from the sales!</p>
+      <p>The idea of TeeZilla has been formed by a partnership between web company Simpleweb, based on the Bristol Harbourside and ex record producer and entrepreneur Neal Slateford.</p>
+      <p>TeeZilla invites you to join up and submit as many tee-shirt designs as you like.  They are then exhibited on the site for 14 days.  In this time other users can log in and vote for their favourite designs through Facebook and / or Twitter, as well as leaving comments. At the end of every month the design with the most votes will get their image printed onto a tee and get £6 for every tee-shirt sold through the TeeZilla shop. Plus, another lucky winner, picked by the TeeZilla team, will get their design put on a tee-shirt too - and receive £6 per sale!  Brilliant!</p>
+      <p>Cast your votes or submit a design now and join the TeeZilla community.</p>
     </div>
   </div>
 
