Added Optimizely script

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -333,6 +333,9 @@
     })();
 
   </script>
+  
+  <!-- Optimizely -->
+  <script src="//cdn.optimizely.com/js/42790142.js"></script>
 
 </body>
 </html>
