Tweaks to make Optimizley play nicely

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -88,9 +88,9 @@
         <li class="last red_nav">
           {% if current_user %}
             <a href="/ideas/new" title="add a new entry" class="simple_login">
-              Submit Your Design
+              <span class="submit-text">Submit Your Design</span>
               <span>
-                Upload your Tee design to Win
+                <span class="teaser-text">Upload your Tee design to Win</span>
               </span>
             </a>
           {% else %}
