Updated this months winner

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -174,16 +174,16 @@
           <h3>Last Month's Winner</h3>
 
             <div class="medium_thumb clearfix">
-              <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to Joshua K. Marshall's tee in the Teezilla store">
-                <img src="{{asset_url}}/images/winner_march12.png" alt="Motubu aka" />
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/delicate-skull" title="link to Florence Boyd's tee in the Teezilla store">
+                <img src="{{asset_url}}/images/winner_april12.png" alt="Delicate Skull" />
               </a>
               <p>
-                <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to #'s tee in the Teezilla store" class="title_of_tee">
-                  Motubu aka
+                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/delicate-skull" title="link to Florence Boyd's tee in the Teezilla store" class="title_of_tee">
+                  Delicate Skull
                 </a>
-                <span class="name_of_designer">by Joshua K. Marshall</span>
+                <span class="name_of_designer">by Florence Boyd</span>
               </p>
-              <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to buy {{idea.title}} tee" class="grey_button">
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/delicate-skull" title="link to buy {{idea.title}} tee" class="grey_button">
                 Buy Tee
               </a>
 
