--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1650,10 +1650,10 @@ color: #555555;
 .submit-text {
   font-family: 'PacificoRegular', serif !important;
   font-size: 1em !important;
-  margin: 3px 0 4px 0 !important;
+  margin: 2px 0 0 0 !important;
   padding: 0 !important;
 }
 .teaser-text {
-  margin: 0 !important;
-  padding: 0 !important;
+  font-size: .5em !important;
+  margin: 3px 0 0 0 !important;
 }
