--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -24,14 +24,14 @@
 
         <div id="details_share_icons_wrap">
           <p style="margin-bottom: 4px;">Share on:</p>
-          <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{idea.title}}&amp;p[summary]={{idea.content}}&amp;p[url]=http://teezilla.rusic.com{{space.permalink}}&amp;&amp;p[images][0]={{idea.images.first.medium_large}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Facebook</a>
+          <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{product.title}}&amp;p[summary]={{product.description}}&amp;p[url]=http://teezilla.myshopify.com{{product.url}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Facebook</a>
           <a href="http://twitter.com/share?text=Vote for {{idea.title}} on TeeZilla!&amp;count=none&amp;via=TeeZillaHQ&amp;related=rusicHQ" title="Share this tee on Twitter" class="lnkShareTwitter twitter_grey">Twitter</a>
         </div>
         
         <p>
           <span class="designer_name_title">Designer:</span>
-          <img src="{{idea.user.image_url}}" alt="Name of User" />
-          <span class="designer_name">{{idea.user.nickname}}</span>
+          <a href="{{ idea.user.profile_url }}" title="link to {{ idea.user.nickname }}'s profile on {{ idea.user.provider }}"><img src="{{idea.user.image_url}}" alt="Name of User" /></a>
+          <span class="designer_name"><a href="{{ idea.user.profile_url }}" title="link to {{ idea.user.nickname }}'s profile on {{ idea.user.provider }}">{{idea.user.nickname}}</a></span>
         </p>
 
         <p class="days-remaining" data-days="{{ idea.expires_at_in_days }}">
@@ -84,6 +84,16 @@
 </div>
 {% endif %}
 
+<!-- Interested Users -->
+<div class="block_wrapper">
+  <h2 class="box_title"><span>People interested in this tee</span></h2>
+  <ul id="interested-people">
+    {% for user in idea.interested_users %}
+      <li><a href="{{ user.profile_url }}" title="{{ user.nickname }}'s {{ user.provider }} profile"><img src="{{ user.image_url }}" alt="{{ user.nickname }}" width="40" height="40" class="avatar" /></a></li>
+    {% endfor %}
+  </ul>
+</div>
+
 <div class="block_wrapper">
 
   <h2 class="box_title"><span>Comments</span></h2>
@@ -101,10 +111,10 @@
     <ul id="comments_list" class="clearfix">
       {% for comment in idea.comments %}
         <li>
-          <img src="{{comment.user.image_url}}" alt="{{comment.user.nickname}}" />
+          <a href="{{ comment.user.profile_url }}" title="link to {{ comment.user.nickname }}'s profile on {{ comment.user.provider }}"><img src="{{comment.user.image_url}}" alt="{{comment.user.nickname}}" /></a>
           <p>
             <span class="comment_date">{{comment.created_at | date: '%b %d, %Y at %H:%I'}}</span>
-            <span class="comment_author">{{comment.user.nickname}} wrote...</span>
+            <span class="comment_author"><a href="{{ comment.user.profile_url }}" title="link to {{ comment.user.nickname }}'s profile on {{ comment.user.provider }}">{{comment.user.nickname}}</a> wrote...</span>
             {{comment.body | markdown}}
           </p>
         </li>
