Updated about link

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -69,7 +69,7 @@
     
       <div id="support-topbar">
         <ul>
-          <li class="about"><a id="inline" href="#teezilla-about">About Teezilla</a></li>
+          <li class="about"><a href="http://teezilla.myshopify.com/pages/about-teezilla" title="link to TeeZilla about page">About Teezilla</a></li>
           <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Buy the Tee's</a></li>
           <li><a href="http://www.facebook.com/pages/TeeZilla/269323539774090" title="link to Teezilla on Facebook">Teezilla on Facebook</a></li>
           <li><a href="http://teezilla.rusic.com/teezilla-support" title="link to Teezilla support community">Support &amp; FAQs</a></li>
