Updated with May winner

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -158,17 +158,17 @@
           <h3>Last Month's Winner</h3>
 
             <div class="medium_thumb clearfix">
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/delicate-skull" title="link to Florence Boyd's tee in the Teezilla store">
-                <img src="{{asset_url}}/images/winner_april12.png" alt="Delicate Skull" />
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/sleepy-fox" title="link to Niall Grant's tee in the Teezilla store">
+                <img src="{{asset_url}}/images/winner_may12.png" alt="Sleepy Fox" />
               </a>
               <p>
-                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/delicate-skull" title="link to Florence Boyd's tee in the Teezilla store" class="title_of_tee">
-                  Delicate Skull
+                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/sleepy-fox" title="link to Niall Grant's tee in the Teezilla store" class="title_of_tee">
+                  Sleepy Fox
                 </a>
-                <span class="name_of_designer">by Florence Boyd</span>
+                <span class="name_of_designer">by Niall Grant</span>
                 <span class="price">£19.99</span>
               </p>
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/delicate-skull" title="link to buy {{idea.title}} tee" class="grey_button">
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/sleepy-fox" title="link to buy Niall Grant's tee" class="grey_button">
                 Buy Tee
               </a>
 
