Added height and width attributes

--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -17,7 +17,7 @@
             <a href="{{idea.permalink}}" title="link to {{idea.title}}">
               <span class="vote_status_wrapper" title="Number of votes">{{idea.likes}}</span>
               <span class="vote_now_prompt">Vote for design &gt;</span>
-              <img src="{{idea.images.first.medium_square}}" alt="{{idea.title}}" />
+              <img src="{{idea.images.first.medium_square}}" alt="{{idea.title}}" height="184" width="184" />
               <span class="title_of_tee">
                 {{ idea.title | truncate: 17 }}
               </span>
