--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -756,6 +756,11 @@ input.big_red_button:active {
   display: block;
   color: #333;
   clear: both;
+  white-space: nowrap;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 1.6em;
 }
 
 .large_thumb a:hover span.title_of_tee, .large_tee_hover a span.title_of_tee, .large_tee_hover a:visited span.title_of_tee {
