If no most liked ideas for month show 'no ideas for this month' message

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -179,15 +179,19 @@
 
         <div class="block_wrapper clearfix">
           <h3>Most popular Tees</h3>
-
-          {% for idea in space.most_liked_ideas limit:6 %}
+          
+          {% if space.most_liked_ideas_for_month != empty %}
+            {% for idea in space.most_liked_ideas_for_month limit:6 %}
             <div class="small_thumb">
               <a href="{{idea.permalink}}"title="link to {{idea.title}}">
                 <img src="{{idea.images.first.square}}" alt="{{idea.title}} Tee" />
                 <span class="title_of_tee">{{idea.title | truncate: 11}}</span>
               </a>
             </div><!-- end of .small_thumb -->
-                {% endfor %}
+            {% endfor %}
+          {% else %}
+          <h4>No ideas for this month</h4>
+          {% endif %}
 
         </div><!-- end .block_wrapper -->
 
