--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -158,17 +158,17 @@
           <h3>Last Month's Winner</h3>
 
             <div class="medium_thumb clearfix">
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/sleepy-fox" title="link to Niall Grant's tee in the Teezilla store">
-                <img src="{{asset_url}}/images/winner_may12.png" alt="Sleepy Fox" />
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the Teezilla store">
+                <img src="{{asset_url}}/images/winner_june12.png" alt="Orchids" />
               </a>
               <p>
-                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/sleepy-fox" title="link to Niall Grant's tee in the Teezilla store" class="title_of_tee">
-                  Sleepy Fox
+                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the Teezilla store" class="title_of_tee">
+                  Orchids
                 </a>
-                <span class="name_of_designer">by Niall Grant</span>
+                <span class="name_of_designer">by Lola Hutcheson</span>
                 <span class="price">£19.99</span>
               </p>
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/sleepy-fox" title="link to buy Niall Grant's tee" class="grey_button">
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to buy Lola Hutcheson's tee in the Teezilla store" class="grey_button">
                 Buy Tee
               </a>
 
