updated for TeeZilla chartiy take over

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -78,9 +78,14 @@
       </div>
     
       <div id="header_content" class="clearfix">
-          <a href="{{space.permalink}}" id="main_logo">
+      
+        <div id="takeover-logo">
+            <a href="{{space.permalink}}"><img src="{{asset_url}}/images/takeover-logo.png" alt="TeeZilla take over logo" /></a>
+        </div>
+      
+        <a href="{{space.permalink}}" id="main_logo">
             Teezil.la Website
-          </a>
+        </a>
 
       <ul id="main_nav">
         <li><a href="{{space.permalink}}" title="link to TeeZilla voting">Vote<span>Rate your favourite shirt</span></a></li>
@@ -103,9 +108,14 @@
 
       <div id="main_arrow"><!-- IE Fix --></div>
 
+        <div id="takeover-block">
+            <div class="charity-logo"><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works"><img src="{{asset_url}}/images/temwa-logo.png" alt="Temwa logo" /></a></div>
+            <h1>TeeZilla Charity Take Over</h1>
+            <p><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works">August sees in our first ever incredibly awesome Charity Take Over - <strong>click here</strong> to see how it works</a></p>
+        </div>
+
     </div><!-- #header_content end -->
     </div><!-- #header_rail end -->
-
 
   <div id="main_rail">
       <div id="main_content" class="clearfix">
