--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -389,7 +389,7 @@ a#main_logo, a#main_logo:visited {
 
 #main_arrow {
   position: absolute;
-  bottom: -87px;
+  bottom: 36px;
   left: -55px;
   background: url('../images/main_arrow.png') top left no-repeat;
   width: 68px;
@@ -837,7 +837,7 @@ h1.box_title span {
 }
 
 span.homepage_title_pointer {
-  display: block;
+  display: none!important;
   position: absolute;
   top: -10px;
   right: -70px;
@@ -1694,3 +1694,33 @@ color: #555555;
   position: relative;
 }
 
+#takeover-block {
+    float: left;
+    position: relative;
+    clear: left;
+    width: 960px;
+    margin: 40px 0 20px 20px;
+    background: #FFFFFF;
+    border: 1px solid #CCCCCC;
+}
+
+#takeover-block h1 {
+    margin: 15px 0 5px 0;
+    color: #C60909;
+    font-size: 26px;
+}
+
+#takeover-logo {
+    position: absolute;
+    top: 0;
+    left: -70px;
+}
+
+.charity-logo {
+    float: left;
+    position: relative;
+    height: 90px;
+    margin: 0 20px 0 0;
+    padding: 0 20px;
+    border-right: 1px solid #CCCCCC;
+}
