updated sidebar text for charity

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -151,7 +151,7 @@
           <h2>What is Teezilla?</h2>
           <p>T-Shirts designed by <strong>YOU</strong>.</p>
           <p><strong>People</strong> upload their designs and every month the <strong>people</strong> choose their favourite to be printed and sold in the Teezilla store.</p>
-          <p>Winning entries get £200 or £6 from every sale.</p>
+          <p>Winning entries get £200 and £6 from every sale will go to charity.</p>
           <p>It's not always the best designs that win, it's the most popular.</p>
           <p>Started by a pair of creative freaks, Teezilla democratises the T-Shirt shop and puts the power in your hands.</p>
 
