--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -1,6 +1,6 @@
 <div class="block_wrapper clearfix with_expander_button">
 
-  <h1 class="box_title"><span>Teezilla Tees are only made by your votes</span><span class="homepage_title_pointer"><!-- IE Fix --></span></h1>
+  <h1 class="box_title"><span>TeeZilla Tees are only made by your votes</span><span class="homepage_title_pointer"><!-- IE Fix --></span></h1>
   <br class="clrb" />
 
   <div id="filter-bar">
