--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -69,11 +69,11 @@
     
       <div id="support-topbar">
         <ul>
-          <li class="about"><a href="http://teezilla.myshopify.com/pages/about-teezilla" title="link to TeeZilla about page">About Teezilla</a></li>
-          <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Buy the Tee's</a></li>
-          <li><a href="http://www.facebook.com/pages/TeeZilla/269323539774090" title="link to Teezilla on Facebook">Teezilla on Facebook</a></li>
-          <li><a href="http://teezilla.rusic.com/teezilla-support" title="link to Teezilla support community">Support &amp; FAQs</a></li>
-          <li><a href="http://teezilla.myshopify.com/pages/terms-conditions" title="link toTeezilla terms & conditions">Terms &amp; conditions</a></li>
+          <li class="about"><a href="http://teezilla.myshopify.com/pages/about-teezilla" title="link to TeeZilla about page">About TeeZilla</a></li>
+          <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Buy the Tees</a></li>
+          <li><a href="http://www.facebook.com/pages/TeeZilla/269323539774090" title="link to TeeZilla on Facebook">TeeZilla on Facebook</a></li>
+          <li><a href="http://teezilla.rusic.com/teezilla-support" title="link to TeeZilla support community">Support &amp; FAQs</a></li>
+          <li><a href="http://teezilla.myshopify.com/pages/terms-conditions" title="link toTeeZilla terms & conditions">Terms &amp; conditions</a></li>
         </ul>
       </div>
     
@@ -84,7 +84,7 @@
         </div>
       
         <a href="{{space.permalink}}" id="main_logo">
-            Teezil.la Website
+            TeeZil.la Website
         </a>
 
       <ul id="main_nav">
@@ -148,12 +148,12 @@
 
         <div id="what-is-teezilla" class="block_wrapper">
           
-          <h2>What is Teezilla?</h2>
+          <h2>What is TeeZilla?</h2>
           <p>T-Shirts designed by <strong>YOU</strong>.</p>
-          <p><strong>People</strong> upload their designs and every month the <strong>people</strong> choose their favourite to be printed and sold in the Teezilla store.</p>
+          <p><strong>People</strong> upload their designs and every month the <strong>people</strong> choose their favourite to be printed and sold in the TeeZilla store.</p>
           <p>Winning entries get £200 and £6 from every sale will go to charity.</p>
           <p>It's not always the best designs that win, it's the most popular.</p>
-          <p>Started by a pair of creative freaks, Teezilla democratises the T-Shirt shop and puts the power in your hands.</p>
+          <p>Started by a pair of creative freaks, TeeZilla democratises the T-Shirt shop and puts the power in your hands.</p>
 
         </div><!-- end .block_wrapper -->
 
@@ -168,17 +168,17 @@
           <h3>Last Month's Winner</h3>
 
             <div class="medium_thumb clearfix">
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the Teezilla store">
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the TeeZilla store">
                 <img src="{{asset_url}}/images/winner_june12.png" alt="Orchids" />
               </a>
               <p>
-                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the Teezilla store" class="title_of_tee">
+                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the TeeZilla store" class="title_of_tee">
                   Orchids
                 </a>
                 <span class="name_of_designer">by Lola Hutcheson</span>
                 <span class="price">£19.99</span>
               </p>
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to buy Lola Hutcheson's tee in the Teezilla store" class="grey_button">
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to buy Lola Hutcheson's tee in the TeeZilla store" class="grey_button">
                 Buy Tee
               </a>
 
@@ -281,10 +281,10 @@
   </div>
   {% endunless %}
   
-  <!-- About Teezilla -->
+  <!-- About TeeZilla -->
   <div style="display:none">
     <div id="teezilla-about" class="htmlbox">
-      <h1>About Teezilla</h1>
+      <h1>About TeeZilla</h1>
       <p>TeeZilla is a site where anyone with an idea can join up, submit their designs and be in with a chance of getting their design printed on a tee and get a nice cut from the sales!</p>
       <p>The idea of TeeZilla has been formed by a partnership between web company Simpleweb, based on the Bristol Harbourside and ex record producer and entrepreneur Neal Slateford.</p>
       <p>TeeZilla invites you to join up and submit as many tee-shirt designs as you like.  They are then exhibited on the site for 14 days.  In this time other users can log in and vote for their favourite designs through Facebook and / or Twitter, as well as leaving comments. At the end of every month the design with the most votes will get their image printed onto a tee and get £6 for every tee-shirt sold through the TeeZilla shop. Plus, another lucky winner, picked by the TeeZilla team, will get their design put on a tee-shirt too - and receive £6 per sale!  Brilliant!</p>
@@ -305,7 +305,7 @@
         <a href="http://twitter.com/share?text=I'm checking out TeeZilla!&amp;count=none&amp;via=TeeZilla&amp;related=rusicHQ" title="Share this page on Twitter" class="lnkShareTwitter twitter_grey">Share on Twitter</a>
       </div>
 
-      <p><a href="#">Teezilla</a> is <a href="http://rusic.com" title="link to Rusic">powered by Rusic</a> &copy;2012  </p>
+      <p><a href="#">TeeZilla</a> is <a href="http://rusic.com" title="link to Rusic">powered by Rusic</a> &copy;2012  </p>
 
 
         </div><!-- #footer_content end -->
