--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -24,7 +24,7 @@
 
         <div id="details_share_icons_wrap">
           <p style="margin-bottom: 4px;">Share on:</p>
-          <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{product.title}}&amp;p[summary]={{product.description}}&amp;p[url]=http://teezilla.myshopify.com{{product.url}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Facebook</a>
+          <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{idea.title}}&amp;p[summary]={{idea.content}}&amp;p[url]=http://teezilla.rusic.com{{idea.permalink}}&amp;&amp;p[images][0]={{idea.images.first.medium_large}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Facebook</a>
           <a href="http://twitter.com/share?text=Vote for {{idea.title}} on TeeZilla!&amp;count=none&amp;via=TeeZillaHQ&amp;related=rusicHQ" title="Share this tee on Twitter" class="lnkShareTwitter twitter_grey">Twitter</a>
         </div>
         
