charity entry label

--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -15,6 +15,11 @@
         {% for idea in pagination.collection %}
           <div class="large_thumb" id="idea-{{idea.uuid}}">
             <a href="{{idea.permalink}}" title="link to {{idea.title}}">
+            
+              {% if idea.custom3 == '1' %}
+                  <span class="charity-label">Charity entry</span>
+              {% endif %}
+              
               <span class="vote_status_wrapper" title="Number of votes">{{idea.likes}}</span>
               <span class="vote_now_prompt">Vote for design &gt;</span>
               <img src="{{idea.images.first.medium_square}}" alt="{{idea.title}}" />
