--- a/ideas/new.html.liquid
+++ b/ideas/new.html.liquid
@@ -46,6 +46,7 @@
 			</div>
 			
 			<div class="input clearfix">
+			    <input type="hidden" id="idea_custom3" name="idea[custom3]" value="1" />
 				<input type="submit" value="Submit your design" class="big_red_button" />
 			</div>
 
