--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -40,7 +40,7 @@
         
         <p>
           <span class="designer_name_title">Designer:</span>
-          <a href="{{ idea.user.profile_url }}" title="link to {{ idea.user.nickname }}'s profile on {{ idea.user.provider }}"><img src="{{idea.user.image_url}}" alt="Name of User" /></a>
+          <a href="{{ idea.user.profile_url }}" title="link to {{ idea.user.nickname }}'s profile on {{ idea.user.provider }}"><img src="{{idea.user.image_url}}" alt="{{ idea.user.nickname }}'s avatar" /></a>
           <span class="designer_name"><a href="{{ idea.user.profile_url }}" title="link to {{ idea.user.nickname }}'s profile on {{ idea.user.provider }}">{{idea.user.nickname}}</a></span>
         </p>
 
