--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -168,17 +168,17 @@
           <h3>Last Month's Winner</h3>
 
             <div class="medium_thumb clearfix">
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the TeeZilla store">
-                <img src="{{asset_url}}/images/winner_june12.png" alt="Orchids" />
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store">
+                <img src="{{asset_url}}/images/winner_july12.png" alt="Pourquoi" />
               </a>
               <p>
-                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to Lola Hutcheson's tee in the TeeZilla store" class="title_of_tee">
-                  Orchids
+                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store" class="title_of_tee">
+                  Pourquoi
                 </a>
-                <span class="name_of_designer">by Lola Hutcheson</span>
+                <span class="name_of_designer">by Joshua K. Marshall</span>
                 <span class="price">£19.99</span>
               </p>
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/orchids" title="link to buy Lola Hutcheson's tee in the TeeZilla store" class="grey_button">
+              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/pourquoi" title="link to buy Joshua K. Marshall's tee in the TeeZilla store" class="grey_button">
                 Buy Tee
               </a>
 
