added charity message to sidebar

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -154,7 +154,7 @@
           <p>Winning entries get £200 and £6 from every sale will go to charity.</p>
           <p>It's not always the best designs that win, it's the most popular.</p>
           <p>Started by a pair of creative freaks, TeeZilla democratises the T-Shirt shop and puts the power in your hands.</p>
-
+          <p><strong>Any charities interested in working with us, please get in touch at <a href="mailto:info@teezil.la">info@teezil.la</a></strong></p>
         </div><!-- end .block_wrapper -->
 
         {% if current_user %}
