--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -109,9 +109,9 @@
       <div id="main_arrow"><!-- IE Fix --></div>
 
         <div id="takeover-block">
-            <div class="charity-logo"><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works"><img src="{{asset_url}}/images/temwa-logo.png" alt="Temwa logo" /></a></div>
+            <div class="charity-logo"><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works"><img src="{{asset_url}}/images/whizzkidz-logo.png" alt="Temwa logo" /></a></div>
             <h1>TeeZilla Charity Take Over</h1>
-            <p><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works">August sees in our first ever incredibly awesome Charity Take Over - <strong>click here</strong> to see how it works</a></p>
+            <p><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works">September is another Charity Take Over month! <strong>Click here</strong> to see how it works</a></p>
         </div>
 
     </div><!-- #header_content end -->
